--- a/src/Presentation/FriendsOrganizer.UI/FriendsOrganizer.UI.csproj
+++ b/src/Presentation/FriendsOrganizer.UI/FriendsOrganizer.UI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.0.0" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
   <ItemGroup>
