--- a/src/Presentation/FriendsOrganizer.UI/FriendsOrganizer.UI.csproj
+++ b/src/Presentation/FriendsOrganizer.UI/FriendsOrganizer.UI.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
+    <PackageReference Include="Prism.Core" Version="7.2.0.1422" />
   </ItemGroup>
 
   <ItemGroup>
