--- a/src/Data/FriendsOrganizer.Data/FriendsOrganizer.Data.csproj
+++ b/src/Data/FriendsOrganizer.Data/FriendsOrganizer.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201018050545_Validation.cs" />
+    <Compile Remove="Migrations\20201018050545_Validation.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
