--- a/src/Business/FriendsOrganizer.ProgrammingLanguages.Service/FriendsOrganizer.ProgrammingLanguages.Service.csproj
+++ b/src/Business/FriendsOrganizer.ProgrammingLanguages.Service/FriendsOrganizer.ProgrammingLanguages.Service.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\FriendsOrganizer.Data.Models\FriendsOrganizer.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Data\FriendsOrganizer.Data\FriendsOrganizer.Data.csproj" />
+  </ItemGroup>
+
 </Project>
